@@ -1,3 +1,8 @@
+2008-03-06  Dan Williams  <dcbw@redhat.com>
+
+	* autogen.sh
+		- Die gnome-common, die
+
 2008-02-28  Dan Williams  <dcbw@redhat.com>
 
 	Release 0.6.5.99  (0.6.6rc2)
